--- a/server/package.json
+++ b/server/package.json
@@ -26,6 +26,7 @@
     "morgan": "^1.10.0",
     "multer": "^2.0.0",
     "multer-storage-cloudinary": "^4.0.0",
+    "node-cache": "^5.1.2",
     "nodemailer": "^7.0.3",
     "paystack": "^2.0.1",
     "punycode": "^2.3.1",
